<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>livox_ros2_avia</name>
  <version>0.0.1</version>
  <description>livox ros2 driver for Avia</description>
  <maintainer email="ziyu.cao@liu.se">Ziyu Cao</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend>
  <depend>livox_interfaces</depend>
  <depend>sensor_msgs</depend>
  <depend>rcutils</depend>
  <depend>pcl_conversions</depend>
  <depend>rcl_interfaces</depend>
  <depend>libpcl-all-dev</depend>
  <depend>livox_sdk_vendor</depend>

  <exec_depend>rosbag2</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>git</depend>
  <depend>apr</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
